singleCase_Carousel.css
.carousel-outer {
    position: relative;
    width: 100vw;
    left: 50%;
    transform: translateX(-50%);
    margin-top: 40px;
    margin-bottom: 50px;
    overflow: visible;
}

/* ===== WRAPPER ===== */
.carousel-component,
.wrapper {
    position: relative;
    width: 100%;
    max-width: 690px;
    margin: 0 auto;
}

/* make sure controls stay at same height as carousel */
.control {
    align-self: center;
}

/* ===== VIEWPORT ===== */
.window {
    width: 100%;
    max-width: 690px;
    overflow-x: hidden;
    overflow-y: visible;
    position: relative;
    display: flex;
    align-items: center;
    padding-bottom: 20px;
}

/* ===== TRACK ===== */
.track {
    display: flex;
    transition: transform 0.5s ease;
}

/* ===== ITEM ===== */
.item {
    flex: 0 0 100%; /* each item takes x% width of viewport */
    padding: 0 1px;
    box-sizing: border-box;
    transition: transform 0.3s ease;
}

.item img {
    width: 90%;
    height: 400px; /*height of carousel*/
    object-fit: cover;
    border-radius: 0;
    transition: transform 0.6s cubic-bezier(0.22, 1, 0.36, 1);
    transform-origin: center;
    border-radius: 5px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
}

/* ===== HEXAGON BUTTONS ===== */
.arrow-layer {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 10;
    pointer-events: none;
}

.control {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    pointer-events: auto;
}

#prev {
    left: -80px;
}

#next {
    right: -80px;
}

.control svg {
    display: block;
}

.hexagon {
    fill: transparent;
    stroke: #ece318;
    stroke-width: 3;
    stroke-linejoin: round;
}

.arrow {
    fill: #000000;
    font-size: 28px;
    font-weight: bold;
    text-anchor: middle;
    dominant-baseline: middle;
    font-family: Arial;
    pointer-events: none;
    position: absolute;
}

/* hover */
.control:hover .hexagon {
    fill: #ece318;
    stroke: #ece318;
}

.control:hover .arrow {
    fill: #000;
}

/* Responsive adjustments */
@media (max-width: 800px) {
    #prev {
        left: 10px;
    }
    #next {
        right: 10px;
    }

    .wrapper,
    .window {
        width: 100%;
        max-width: 100%;
    }

    .item {
        display: flex;
        justify-content: center;
    }

    .item img {
        display: block;
        margin: 0 auto;
        padding-left: 0;
        width: 80vw;
        max-height: 40vh;
        height: auto;
        max-width: 100%;
    }

    .hexagon {
        fill: #ece118d0;
        stroke: #ece318;
    }
    .control:hover .hexagon {
        fill: #ece318;
        stroke: #ece318;
    }
}

